# Urop-Python-Fuzzer

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  soe_input_sample.txt
.tmp/pytest_runner_payloads/: payload.pkl  result.pkl
src/downloader/: download_repo.py  downloader.py
src/soe/: _global.py  _helpers.py  _types.py  freq_list.py  fuzzer.py  run.py  runner.py  soe.py
src/soe/function_list/: ast_function_visitor.py  function_info.py  function_list.json  function_list.py
tests/: test_downloader.py  test_regressions.py
tests/test_repo/test_src_1/: main.py
tests/test_repo/test_src_2/: main.py
tests/test_repo/test_src_3/: main.py
